gcc/testsuite/rust/rustc/ui/methods/method-resolvable-path-in-pattern.rs
struct Foo;

trait MyTrait {
    fn trait_bar() {}
}

impl MyTrait for Foo {}

fn main() {
    match 0u32 {
        <Foo as MyTrait>::trait_bar => {}
// { dg-error ".E0532." "" { target *-*-* } .-1 }
    }
}

